2024/06/13 - Minor DPKG update: redirect output of noip2 to /var/log/noip2.log
2024/06/01 - Version 2.5: Enable /fullscrean and /floatbar.
	     Also make ENTER key active the OK button in password window
2024/05/30 - Version 2.4: Add "/sound" argument to xfreerdp.
2024/04/11 - Version 2.3: Use entire screen if screen size field is left blank.
2024/04/08 - Once per hour, warn user to reboot if /var/run/reboot-reqiured
	     exists. Bump version to 2.2.
2024/04/07 - Test connectivity to gateway / host before launching xfreerdp
             Bump version to 2.1
2024/04/07 - Clear password text; got cursor to appear in password entry fields.
2024/04/06 - version 2.0: Several changes
    1. Passwords no longer stored in entries.dat file.
    2. When you click "launch" it prompts for password.
    3. When you add or update an entry it does DNS checks on the hostname
       or gateway hostname to make sure they will resolve.
    4. When adding or updating an entry the alert window now tells you
       everything you got wrong instead of only telling you the first one.
2024/04/02 - version 1.6: Tell user to check phone upon xfreerdp launch
2024/03/28 - version 1.5: chmod(entries.dat, 0600)