@@ -1,4 +1,4 @@
-CFLAGS = -Wall -O $(shell pkg-config --cflags gtk+-3.0)
+CFLAGS = -Wall -O -g $(shell pkg-config --cflags gtk+-3.0)
 #CFLAGS != pkg-config --cflags gtk+-3.0
 LDLIBS != pkg-config --libs gtk+-3.0
 LDLIBS += -lcrypto
