@@ -1,1 +1,1 @@
-#define VERSION		"2.5"
+#define VERSION		"2.6"
